--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -139,7 +139,7 @@ img {
   max-width: 739px;
   padding: 5px;
   margin: 10px 0 10px 0;
-  border: 1px solid #ebebeb;
+  border: 1px solid #bbb;
 
   box-shadow: 0 0 5px #ebebeb;
   -webkit-box-shadow: 0 0 5px #ebebeb;
@@ -366,6 +366,118 @@ Full-Width Styles
   background: #212121;
 }
 
+#btt {
+  margin: 0;
+  padding: 0;
+  position: fixed;
+  right: 0;
+  bottom: 16px;
+  opacity: 0.1;
+  transition: none;
+  height: 50px;
+}
+
+#btt:hover {
+  opacity: 1;
+}
+
+#btt img {
+  padding: 0 7px 0 0;
+  border: none;
+  vertical-align:top;
+}
+
+nav {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  z-index: 2;
+}
+
+nav > * {
+  padding: 0;
+  margin: 0;
+}
+
+nav > ul > li {
+  border-top-left-radius: 2px;
+  border-top-right-radius: 2px;
+}
+
+nav ul {
+  text-align: left;
+  display: inline;
+  margin: 0;
+  list-style: none;
+  border-top-left-radius: 2px;
+  border-top-right-radius: 2px;
+}
+
+nav ul li {
+  font: bold 12px/18px sans-serif;
+  display: inline-block;
+  margin-right: -4px;
+  position: relative;
+  padding: 10px 15px;
+  background: #0090ff;
+  color: #fff;
+  cursor: pointer;
+  -webkit-transition: all 0.2s;
+  -moz-transition: all 0.2s;
+  -ms-transition: all 0.2s;
+  -o-transition: all 0.2s;
+  transition: all 0.2s;
+}
+
+nav ul li:hover {
+  background: #fff;
+  color: #0090ff;
+}
+
+nav ul li a {
+  color: #fff;
+  text-decoration:none;
+}
+
+nav ul li:hover a {
+  color: #0090ff;
+  text-decoration:none;
+}
+
+nav ul li ul {
+  padding: 0;
+  position: absolute;
+  top: 38px;
+  left: 0;
+  width: 150px;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  display: none;
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transiton: opacity 0.2s;
+  -moz-transition: opacity 0.2s;
+  -ms-transition: opacity 0.2s;
+  -o-transition: opacity 0.2s;
+  -transition: opacity 0.2s;
+  box-shadow: 5px 5px 5px rgba(0,0,0,.5);
+}
+
+nav ul li ul li { 
+  background: #fff; 
+  display: block; 
+  color: #0090ff;
+  text-shadow: 0 -1px 0 #000;
+}
+
+nav ul li ul li:hover { background: #C2DFFF; }
+
+nav ul li:hover ul {
+  display: block;
+  opacity: 1;
+  visibility: visible;
+}
 
 
 /*******************************************************************************
